Resolves: fdo#70571 don't crash when clicking link in toc

when link is in a toc, and Cursor in protected areas is
disabled, causing the cursor to leap before the toc
before trying to see what's under the cursor in order
to jump to it

Change-Id: Iaf348e3621df02628b4d2ac8c1165df7082237ed
(cherry picked from commit e9ce405103036b2fa0ae26d331a6cfc3465de10b)
Reviewed-on: https://gerrit.libreoffice.org/6416
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>